add home page res/login page

--- a/frontend/components/SpecialProduct/SpecialProduct.module.scss
+++ b/frontend/components/SpecialProduct/SpecialProduct.module.scss
@@ -26,11 +26,11 @@
     white-space: nowrap;
 }
 
-.progress_bar{
-    background-color:green;
-}
-
 .progress{
     height: 0.5rem;
     margin-top: 10px;
+}
+
+.progress_bar{
+    background:green;
 }
