update filer ram products

--- a/frontend/components/ProductCards/ProductCards.module.scss
+++ b/frontend/components/ProductCards/ProductCards.module.scss
@@ -4,6 +4,8 @@
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 10px #0000001a;
+    min-height: 350px;
+    min-width: 230px;
 }
 
 .product_card:hover .action_bar{
