--- a/frontend/components/SpecialProduct/SpecialProduct.module.scss
+++ b/frontend/components/SpecialProduct/SpecialProduct.module.scss
@@ -1,5 +1,5 @@
 .special_product_card{
-    padding:20px 10px;
+    padding:20px 10px 10px 10px;
     border-radius: 10px;
     background-color: white;
 }
@@ -7,6 +7,7 @@
 .special_product_content .brand{
     color:var(--color-febd69);
 }
+
 
 .other_product{
     background-color: white;
