--- a/frontend/components/CompareProductsPage/CompareProductsPage.module.scss
+++ b/frontend/components/CompareProductsPage/CompareProductsPage.module.scss
@@ -1,4 +1,5 @@
 .compare_products_card{
+    position: relative;
     background-color: white;
     padding: 20px 15px;
     border-radius: 10px;
@@ -48,4 +49,13 @@
     align-items: center;
     padding: 15px 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.compare_products_delete{
+    font-size: 24px;
+    position: absolute;
+    top: 5px;
+    right:10px;
+    color: var(--color-febd69);
+    cursor: pointer;
 }
