--- a/frontend/components/ProductCards/ProductCards.module.scss
+++ b/frontend/components/ProductCards/ProductCards.module.scss
@@ -46,8 +46,13 @@
     height: 25px;
     width: 25px;
     border-radius: 50%;
-    text-align: center;
-    line-height: 20px;
+    outline: none;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background: white;
 }
 
 .wishlist_icon {
@@ -66,7 +71,7 @@
 }
 
 .active{
-    background-color: var(--color-febd69);
+    background-color: var(--color-febd69) !important;
 }
 
 .action_bar .action_bar_item:hover{
