--- a/frontend/components/Common/SideBar/SideBar.module.scss
+++ b/frontend/components/Common/SideBar/SideBar.module.scss
@@ -2,7 +2,7 @@
     background-color: white;
     border-radius: 10px;
     padding: 10px 15px;
-
+    box-shadow: 0 0 10px #0000001a;
     .filter_tilte{
         font-size: 18px;
         line-height: 20px;
@@ -76,3 +76,35 @@
 .random_products:first-child{
     border-bottom: 1px solid var(--color-ededed);
 }
+
+
+.sidebar_brands{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.sidebar_brands li{
+    list-style: none;
+    border:1px solid var(--color-777777);
+    color: var(--color-777777);
+    padding: 0px 5px;
+    text-align: center;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    min-height: 35px;
+}
+
+.sidebar_brands li div{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.sidebar_brands li div img{
+    margin: auto;
+    height: 100%;
+}
+
