--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -25,7 +25,7 @@ body{
 a{
   text-decoration: none !important;
   display: inline-block;
-  color:black !important;
+  color:black;
 }
 
 h1,h2,p {
