--- a/frontend/components/LaptopPage/LaptopPage.module.scss
+++ b/frontend/components/LaptopPage/LaptopPage.module.scss
@@ -2,7 +2,7 @@
     background-color: white;
     border-radius: 10px;
     padding: 10px 15px;
-
+    box-shadow: 0 0 10px #0000001a;
     .filter_tilte{
         font-size: 18px;
         line-height: 20px;
