--- a/frontend/styles/ForgotPassword.module.scss
+++ b/frontend/styles/ForgotPassword.module.scss
@@ -1,7 +1,8 @@
 .auth_card{
     padding: 20px;
     background-color: white;
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     margin: 30px auto;
     border-radius: 10px;
     box-shadow: 0 0 10px #0000001a;
