--- a/frontend/styles/ModalAddCart.module.scss
+++ b/frontend/styles/ModalAddCart.module.scss
@@ -9,16 +9,20 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    padding: 30px;
 }
 
 .button{
     font-size: 10px;
     padding: 10px 15px;
+
 }
 
 .button:hover.orange_color{
     background-color: var( --color-232f3e);
     color: white;
+    outline: none;
+    border: none;
 }
 
 .orange_color{
@@ -118,4 +122,11 @@
     cursor: pointer;
     border-left: solid 1px #dee2e6;
     border-right: solid 1px #dee2e6;
+  }
+
+  .content_modal{
+    max-height:450px;
+    max-width: 650px;
+    width:100%;
+    height: 100%;
   }
