--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,24 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 
 :root{
   --color-131921: #131921;
   --color-3b43149: #3b4149;
   --color-febd69: #febd69;
-  --color-232f3e:#232f3e;
+  --color-fef9ca:#633bd4;
   --color-bf4800:#bf4800;
   --color-f7f7f7:#f7f7f7;
   --color-ededed:#ededed;
   --color-777777:#777777;
   --color-1c1c1b:#1c1c1b;
   --color-f5f5f7:#f5f5f7;
-}
-
-body{
-  font-family: 'Rubik', sans-serif;
 }
 
 a{
@@ -97,7 +95,7 @@ ul,li{
 }
 
 .home_wrapper_2{
-  background-color: var(--color-f7f7f7);
+  background-color: #fef9ca;
   user-select: none;
 }
 
@@ -138,12 +136,13 @@ ul,li{
 }
 
 .header-top-upper{
-  background-color: var(--color-232f3e);
+  // background-color: var(--color-fef9ca);
+  font-size: 14px;
 }
 
-.header-top-upper .input-group-text{
-  background-color: var(--color-febd69);
-}
+// .header-top-upper .input-group-text{
+//   background-color: var(--color-febd69);
+// }
 
 .header-top-upper .header-top-upper img{
   height: 30px;
@@ -197,14 +196,15 @@ ul,li{
 .dropdown_item{
   display: flex;
   align-items: center;
-  padding:10px 15px;
+  padding:7px 15px;
   margin-bottom: 3px;
   width: 100%;
-  color: #131921;
+  color: #633bd4;
 }
 
 .dropdown_item:hover{
   background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
 }
 
 .header-top-upper .compare-products:hover img{
@@ -223,7 +223,9 @@ ul,li{
   cursor: pointer;
 }
 
-
+.home-wrapper-1{
+  background-color: #fef9ca;
+}
 
 footer{
   background-color: var(--color-232f3e);
